<resources>
    <string name="app_name">ReminDTETITB</string>
    <string name="onboarding_text_1">Aplikasi ini dapat mengingatkan anda tentang kuliah pengganti dan tambahan</string>
    <string name="onboarding_text_2">Anda dapat melihat info akademik juga di aplikasi ini</string>
    <string name="onboarding_text_3">Penasaran? Ayo mulai memakai aplikasi ini!</string>
    <string name="onboarding_text_lewati">Lewati ></string>
    <string name="main_kuliah_filter">Kuliah</string>
    <string name="main_akademik_filter">Akademik</string>
    <string name="search">search</string>
    <string name="detail_pasang_pengingat">Pasang Pengingat</string>
    <string name="icon_date_alarm">icon_date_alarm</string>
    <string name="detail_alarm_set_default_text">belum ada jadwal</string>
    <string name="batalkan_alarm">Batalkan Alarm</string>
    <string name="pasang_alarm">Pasang Alarm</string>
</resources>
